# Enterprise-AI-CodeOps-Multi-Agent-System

./: .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md
src/codeops_mas/: __init__.py  cli.py  graph.py  memory.py  models.py
src/codeops_mas/agents/: __init__.py  coder.py  planner.py  reviewer.py  security.py  tester.py
tests/: test_graph.py
